[package]
name = "livemarkdown"
version = "0.2.0"
edition = "2024"
authors = ["Alican Erdogan <opensource@alican.codes>"]
license = "MIT"
description = "A live markdown renderer that watches files and serves HTML over HTTP"
readme = "README.md"
repository = "https://github.com/yourusername/livemarkdown"
keywords = ["markdown", "cli", "server", "live-reload"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
comrak = "0.39.0"
facet = "0.27.14"
facet-json = "0.24.13"
facet-pretty = "0.23.19"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

[dev-dependencies]
axum-test = "18.0.0-rc3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
